fix jumps in tab navigation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2147,7 +2147,7 @@ p {
   min-height: 570px;
   z-index: 0;
 }
-.thumbs-row [class^='col-'] {
+.thumbs-row f [class^='col-'] {
   margin-bottom: 30px;
 }
 .thumbs-row a {
