--- a/assets/less/pages/index.less
+++ b/assets/less/pages/index.less
@@ -92,7 +92,7 @@
 
 	.thumbs-row{
 		min-height: 570px;
-		z-index: 0;
+		z-index: 0;f
 
 		[class^='col-'] {
 			margin-bottom: 30px;
